--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,7 +1,7 @@
-h1 All Question
+h1 All Questions
 
 h2 Questions
 
 = render @questions
 
-= link_to "New question", new_question_path(@question)
+= link_to "Ask question", new_question_path(@question)
