--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,9 +4,13 @@ html
     title Qna
     = csrf_meta_tags
     = csp_meta_tag
-
     = stylesheet_link_tag    "application", media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag "application", 'data-turbolinks-track' => true
 
   body
+
+    = render 'layouts/log_in'
+
+    p.notice #{notice}
+    p.alert #{alert}
     = yield
