--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -1,9 +1,11 @@
 = form_for @question, local: true do |form|
 
-    = form.label :title
-    = form.text_field :title
+  = render 'layouts/errors', resource: @question
 
-    = form.label :body
-    = form.text_field :body
+  = form.label :title
+  = form.text_field :title
 
-    = form.submit
+  = form.label :body
+  = form.text_area :body
+
+  = form.submit 'Create'
