--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,3 +1,6 @@
 ul
   li
-    = link_to "#{question.title}", question_path(question)
+    = link_to question.title, question_path(question)
+    - if current_user&.author_of?(question)
+      = link_to 'Edit', edit_question_path(question)
+      = link_to 'Delete', question_path(question), method: :delete, data: { confirm: "Are you sure? "}
