--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,14 +1,19 @@
 h1 Show Question
 
-h2 #{@question.title}
+h2= @question.title
 
-p #{@question.body}
+p= @question.body
 
-p Answers:
+p Reply
 
-= link_to 'reply', new_question_answer_path(@question)
+= render "questions/new_answer"
 
 ul
-  = render @question.answers
+-@question.answers.each do |answer|
+  - if answer.persisted?
+    li= answer.body
+    - if current_user&.author_of?(answer)
+      = link_to 'Edit', edit_answer_path(answer)
+      = link_to 'Delete', answer_path(answer), method: :delete, data: { confirm: "Are you sure? "}
 
 = link_to 'Back', questions_path
