--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for [@question, @answer] do |form|
+= form_for [@question, @answer], remote: true do |form|
 
   = render 'layouts/errors', resource: @answer
 
