--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -8,12 +8,7 @@ p Reply
 
 = render "questions/new_answer"
 
-ul
--@question.answers.each do |answer|
-  - if answer.persisted?
-    li= answer.body
-    - if current_user&.author_of?(answer)
-      = link_to 'Edit', edit_answer_path(answer)
-      = link_to 'Delete', answer_path(answer), method: :delete, data: { confirm: "Are you sure? "}
+.answers
+  = render @question.answers
 
 = link_to 'Back', questions_path
