--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,6 +1,15 @@
-ul
-  li
-    = link_to question.title, question_path(question)
+-if question.persisted?
+  div id="question_id_#{question.id}"
+    span id="errors_question_id_#{question.id}"
+    = link_to question.title,  question_path(question)
     - if current_user&.author_of?(question)
-      = link_to 'Edit', edit_question_path(question)
-      = link_to 'Delete', question_path(question), method: :delete, data: { confirm: "Are you sure? "}
+        .question
+          p= button_to 'Delete question', question_path(question), method: :delete
+
+          p= link_to 'Edit question', '#', class: 'edit-question-link', data: { question_id: question.id }
+          = form_with model: question, class: 'hidden', html: { id: "edit-question-#{question.id}" } do |f|
+            = f.label :title, 'Question title'
+            = f.text_field :title
+            = f.label :body, 'Question body'
+            = f.text_area :body
+            = f.submit 'Save question'
