--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,19 +1,13 @@
-h1 Show Question
-
-h2= @question.title
-
+h1= @question.title
 p= @question.body
 
-p Reply
+.answers
+  = render @question.answers
 
-= render "questions/new_answer"
-
-ul
--@question.answers.each do |answer|
-  - if answer.persisted?
-    li= answer.body
-    - if current_user&.author_of?(answer)
-      = link_to 'Edit', edit_answer_path(answer)
-      = link_to 'Delete', answer_path(answer), method: :delete, data: { confirm: "Are you sure? "}
-
-= link_to 'Back', questions_path
+- if current_user.present?
+    p Write answer to the question
+    =render 'questions/answer_form'
+- else
+    p
+      = link_to 'Log In', new_user_session_path
+      |  in order to write an answer
