--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,3 +1,9 @@
-h1 New Question
-
-== render 'form'
+=render 'shared/errors', resource: @question
+= form_with model: @question, local: true do |f|
+  = f.label :title
+  = f.text_field :title
+  = f.label :body
+  = f.text_area :body
+  = f.label :files
+  = f.file_field :files, multiple: true, direct_upload: true
+  = f.submit 'Ask'
