--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -2,22 +2,12 @@
   div id="answer_id_#{answer.id}"
     span id="errors_answer_id_#{answer.id}"
     p= answer.body
-    - answer.files.each do |file|
-      div id="file_id_#{file.id}"
-        p= link_to file.filename.to_s, url_for(file)
+    = render 'shared/files_list', resource: answer
+    .links
+      = render 'shared/links_list', resource: answer
     - if show_select_best_option?(answer)
         p= link_to 'Select as best', select_best_answer_path(answer), remote: true, class: 'select-best', method: :patch
     - if current_user&.author_of?(answer)
         p= link_to 'Delete answer', answer_path(answer), remote: true, method: :delete
         p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
-        = form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" } do |f|
-          = f.label :body, 'Your answer'
-          = f.text_area :body
-          = f.label :files
-          = f.file_field :files, multiple: true, direct_upload: true
-          = f.submit 'Save'
-
-          - answer.files.each do |file|
-            div id="edit_file_id_#{file.id}"
-              p= link_to file.filename.to_s, url_for(file)
-              p= link_to 'Delete file', file_path(file), remote: true, method: :delete
+        = render 'answers/answer_edit_form', answer: answer
