--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -10,6 +10,12 @@
     - if show_select_best_option?(answer)
         p= link_to 'Select as best', select_best_answer_path(answer), remote: true, class: 'select-best', method: :patch
     - if current_user&.author_of?(answer)
+      .edit-answer
         p= link_to 'Delete answer', answer_path(answer), remote: true, method: :delete
         p= link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
         = render 'answers/answer_edit_form', answer: answer
+    .answer-comments
+      = render 'shared/comments_list', resource: answer
+    - if current_user.present?
+      .add-comment-answer
+        = render 'shared/add_comment_form', commentable: answer
