--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -3,9 +3,16 @@ p= @question.body
 
 - if can_vote?(@question)
   = render 'shared/vote', resource: @question
-  
+
 - @question.files.each do |file|
   p= link_to file.filename.to_s, url_for(file)
+
+- if current_user.present?
+  .add-comment-question
+    = render 'shared/add_comment_form', commentable: @question
+
+.question-comments
+  = render 'shared/comments_list', resource: @question
 
 .links
   = render 'shared/links_list', resource: @question
@@ -14,6 +21,7 @@ p= @question.body
   = render @question.answers
 
 - if current_user.present?
+  .add-answer
     p Write answer to the question
     = render 'questions/answer_form'
 - else
