--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,8 +2,11 @@ doctype html
 html
   head
     title Qna
+    = Gon::Base.render_data
     = csrf_meta_tags
     = csp_meta_tag
+    = action_cable_meta_tag
+
     = stylesheet_link_tag    "application", media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag "application", 'data-turbolinks-track' => true
 
