--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,5 +1,6 @@
 div align="center"
-  = link_to 'Ask question', new_question_path
+  - if can?(:create, Question)
+    = link_to 'Ask question', new_question_path
 
 .questions
   = render @questions
